#64 CMakeLists.txt updated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,23 +33,35 @@ add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
                  ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
                  EXCLUDE_FROM_ALL)
 
+function(add_gateway_flag)
+	cmake_parse_arguments(PARSED_ARGS 
+				""
+				"INPUT;TO"
+				""
+				${ARGN})
+	string(LENGTH ${PARSED_ARGS_INPUT} str_len)
+	math(EXPR str_new_len ${str_len}-1)
+	string(SUBSTRING ${PARSED_ARGS_INPUT} 0 ${str_new_len} output1)
+	if(${PARSED_ARGS_TO} STREQUAL CMAKE_CXX_FLAGS)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${output1}" PARENT_SCOPE)
+	else(${PARSED_ARGS_TO} STREQUAL CMAKE_EXE_LINKER_FLAGS)
+		set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${output1}" PARENT_SCOPE)
+	else()
+		message(FATAL_ERROR "Invalid input at add_gateway_flag. Invalid input: ${PARSED_ARGS_TO}")
+	endif()
+endfunction(add_gateway_flag)
+
 #ITM Enviroment flags
 if($ENV{ITM_ENVIRONMENT_LOADED})
 	message("###Compiler set to ITM###")
 	execute_process(COMMAND tcsh -c "eval-pkg-config --cflags ual-cpp-gnu --cflags itmconstants --cflags xmllib-$ITM_INTEL_OBJECTCODE"
 			OUTPUT_VARIABLE shell_script1)	
-	string(LENGTH ${shell_script1} str_len)
-	math(EXPR str_new_len ${str_len}-1)
-	string(SUBSTRING ${shell_script1} 0 ${str_new_len} shell_script4)
 	execute_process(COMMAND tcsh -c "eval-pkg-config --libs ual-cpp-gnu xmllib-$ITM_INTEL_OBJECTCODE"
 			OUTPUT_VARIABLE shell_script2)
-	string(LENGTH ${shell_script2} str_len)
-	math(EXPR str_new_len ${str_len}-1)
-	string(SUBSTRING ${shell_script2} 0 ${str_new_len} shell_script3)
+	add_gateway_flag(INPUT ${shell_script1} TO CMAKE_CXX_FLAGS)
+	add_gateway_flag(INPUT ${shell_script2} TO CMAKE_EXE_LINKER_FLAGS)
 	include_directories($ENV{ITM_XMLLIB_DIR}/$ENV{ITM_XMLLIB_VERSION}/$ENV{DATAVERSION}/include/)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DITM_CONSTANTS")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${shell_script4}")
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${shell_script3}")
 	include_directories("include")
 	include_directories("ext/Runaphys/include")
 	set(SOURCE_FILES src/runin.cpp
@@ -63,22 +75,15 @@ if($ENV{ITM_ENVIRONMENT_LOADED})
 		add_executable(RuninTests ${TEST_SRC_FILES})
 		target_link_libraries(RuninTests runin gtest_main pthread)
 	endif()
+#IMAS environment flags
 elseif($ENV{IMAS_ENVIRONMENT_LOADED})
 	message("###Compiler set to IMAS###")
 	execute_process(COMMAND tcsh -c "pkg-config --cflags imas-cpp blitz imas-constants-cpp libxml-2.0 xmllib"
 			OUTPUT_VARIABLE shell_script1)
-	string(LENGTH ${shell_script1} str_len)
-	math(EXPR str_new_len ${str_len}-1)
-	string(SUBSTRING ${shell_script1} 0 ${str_new_len} shell_script3)
 	execute_process(COMMAND tcsh -c "pkg-config --libs imas-cpp blitz libxml-2.0 xmllib"
 			OUTPUT_VARIABLE shell_script2)
-	string(LENGTH ${shell_script2} str_len2)
-	math(EXPR str_new_len2 ${str_len2}-1)
-	string(SUBSTRING ${shell_script2} 0 ${str_new_len2} shell_script4)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${shell_script3}")
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${shell_script4}")
-	message("${shell_script3}")
-	message("${shell_script4}")
+	add_gateway_flag(INPUT ${shell_script1} TO CMAKE_CXX_FLAGS)
+	add_gateway_flag(INPUT ${shell_script2} TO CMAKE_EXE_LINKER_FLAGS)
 	set(SOURCE_FILES src/runin_imas.cpp
 			 src/codeparams_imas.cpp
 			 src/ids_utils.cpp
@@ -92,20 +97,15 @@ elseif($ENV{IMAS_ENVIRONMENT_LOADED})
 		add_executable(RuninTests ${TEST_SRC_FILES})
 		target_link_libraries(RuninTests runin_imas gtest_main pthread)
 	endif()
+#IMAS environment flags (no imas constants)
 else()
 	message("###Compiler set to IMAS (no imas-constants)###")
 	execute_process(COMMAND tcsh -c "pkg-config --cflags imas-cpp blitz libxml-2.0 xmllib"
 			OUTPUT_VARIABLE shell_script1)
-	string(LENGTH ${shell_script1} str_len)
-	math(EXPR str_new_len ${str_len}-1)
-	string(SUBSTRING ${shell_script1} 0 ${str_new_len} shell_script3)
 	execute_process(COMMAND tcsh -c "pkg-config --libs imas-cpp blitz libxml-2.0 xmllib"
 			OUTPUT_VARIABLE shell_script2)
-	string(LENGTH ${shell_script2} str_len)
-	math(EXPR str_new_len ${str_len}-1)
-	string(SUBSTRING ${shell_script2} 0 ${str_new_len} shell_script3)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${shell_script1}")
-	set(CMAKE_EXE_LINKER_FLAGS_INIT "${shell_script2}")
+	add_gateway_flag(INPUT ${shell_script1} TO CMAKE_CXX_FLAGS)
+	add_gateway_flag(INPUT ${shell_script2} TO CMAKE_EXE_LINKER_FLAGS)
 	set(SOURCE_FILES src/runin_imas.cpp
 			 src/codeparams_imas.cpp
 			 src/ids_utils.cpp
