#64 Major CMake update and cleanup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,35 +3,9 @@ cmake_minimum_required(VERSION 3.1)
 project(Runin VERSION 2.0.0
               LANGUAGES CXX)
 
-#set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
 
-set(CMAKE_CXX_FLAGS "-pthread -g -fPIC -std=gnu++11")
-
-find_package(Threads)
-
-#GTEST
-configure_file(${PROJECT_SOURCE_DIR}/cmake/GoogleTestDownload.cmake googletest-download/CMakeLists.txt)
-
-execute_process(
-  COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-  message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-endif()
-execute_process(
-  COMMAND ${CMAKE_COMMAND} --build .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-  message(FATAL_ERROR "Build step for googletest failed: ${result}")
-endif()
-
-# Add googletest directly to our build. This defines
-# the gtest and gtest_main targets.
-add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-                 ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-                 EXCLUDE_FROM_ALL)
+#set(CMAKE_CXX_FLAGS "-pthread -g -fPIC -std=gnu++11")
 
 function(add_gateway_flag)
 	cmake_parse_arguments(PARSED_ARGS 
@@ -51,7 +25,7 @@ function(add_gateway_flag)
 	endif()
 endfunction(add_gateway_flag)
 
-#ITM Enviroment flags
+#ITM Enviroment 
 if($ENV{ITM_ENVIRONMENT_LOADED})
 	message("###Compiler set to ITM###")
 	execute_process(COMMAND tcsh -c "eval-pkg-config --cflags ual-cpp-gnu --cflags itmconstants --cflags xmllib-$ITM_INTEL_OBJECTCODE"
@@ -70,12 +44,7 @@ if($ENV{ITM_ENVIRONMENT_LOADED})
 			 ext/Runaphys/src/critical_field.cpp
 			 ext/Runaphys/src/growth_rate.cpp)
 	add_library(runin ${SOURCE_FILES})	
-	if(TESTING_ENABLED)
-		set(TEST_SRC_FILES test/test_cpo.cpp)
-		add_executable(RuninTests ${TEST_SRC_FILES})
-		target_link_libraries(RuninTests runin gtest_main pthread)
-	endif()
-#IMAS environment flags
+#IMAS environment 
 elseif($ENV{IMAS_ENVIRONMENT_LOADED})
 	message("###Compiler set to IMAS###")
 	execute_process(COMMAND tcsh -c "pkg-config --cflags imas-cpp blitz imas-constants-cpp libxml-2.0 xmllib"
@@ -92,12 +61,7 @@ elseif($ENV{IMAS_ENVIRONMENT_LOADED})
 	include_directories("include")
 	include_directories("ext/Runaphys/include")
 	add_library(runin_imas ${SOURCE_FILES})
-	if(TESTING_ENABLED)
-		set(TEST_SRC_FILES test/test_ids.cpp)
-		add_executable(RuninTests ${TEST_SRC_FILES})
-		target_link_libraries(RuninTests runin_imas gtest_main pthread)
-	endif()
-#IMAS environment flags (no imas constants)
+#IMAS environment (no imas constants)
 else()
 	message("###Compiler set to IMAS (no imas-constants)###")
 	execute_process(COMMAND tcsh -c "pkg-config --cflags imas-cpp blitz libxml-2.0 xmllib"
@@ -114,9 +78,9 @@ else()
 	include_directories("include")
 	include_directories("ext/Runaphys/include")
 	add_library(runin_imas ${SOURCE_FILES})
-	if(TESTING_ENABLED)
-		set(TEST_SRC_FILES test/test_ids.cpp)
-		add_executable(RuninTests ${TEST_SRC_FILES})
-		target_link_libraries(RuninTests runin gtest_main pthread)
-	endif()
+	
+endif()
+
+if(TESTING_ENABLED)
+	add_subdirectory(test)
 endif()
