#64 Switch messages fixed.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,7 +28,7 @@ if($ENV{ITM_ENVIRONMENT_LOADED})
 	set(TEST_SRC_FILES test_cpo.cpp)
 	add_executable(RuninTests ${TEST_SRC_FILES})
 	target_link_libraries(RuninTests runin gtest_main pthread)
-else()
+else($ENV{IMAS_ENVIRONMENT_LOADED})
 	set(TEST_SRC_FILES test_ids.cpp)
 	add_executable(RuninTests ${TEST_SRC_FILES})
 	target_link_libraries(RuninTests runin_imas gtest_main pthread)
