--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,21 @@ project(Runin VERSION 2.0.0
 set(CMAKE_CXX_STANDARD 11)
 
 include(cmake/AddGatewayFlagFunction.cmake)
+include(FindPkgConfig)
 
 #ITM Enviroment 
 if($ENV{ITM_ENVIRONMENT_LOADED})
 	message("###Compiler set to ITM###")
 
-	execute_process(COMMAND tcsh -c "eval-pkg-config --cflags ual-cpp-gnu --cflags itmconstants --cflags xmllib-$ITM_INTEL_OBJECTCODE"
-			OUTPUT_VARIABLE shell_script1)	
-	execute_process(COMMAND tcsh -c "eval-pkg-config --libs ual-cpp-gnu xmllib-$ITM_INTEL_OBJECTCODE"
-			OUTPUT_VARIABLE shell_script2)
+	pkg_check_modules(GATEWAY_FLAGS ual-cpp-gnu itmconstants xmllib-$ENV{ITM_INTEL_OBJECTCODE})
+	string(REPLACE ";" " " GATEWAY_FLAGS_CFLAGS "${GATEWAY_FLAGS_CFLAGS}")
+	string(REPLACE ";" " " GATEWAY_FLAGS_LDFLAGS "${GATEWAY_FLAGS_LDFLAGS}")
 
-	add_gateway_flag(INPUT ${shell_script1} TO CMAKE_CXX_FLAGS)
-	add_gateway_flag(INPUT ${shell_script2} TO CMAKE_EXE_LINKER_FLAGS)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GATEWAY_FLAGS_CFLAGS}")
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GATEWAY_FLAGS_LDFLAGS}")
+
+	message("${GATEWAY_FLAGS}")
+	message("linkers:${CMAKE_EXE_LINKER_FLAGS}")
 
 	include_directories($ENV{ITM_XMLLIB_DIR}/$ENV{ITM_XMLLIB_VERSION}/$ENV{DATAVERSION}/include/)
 	include_directories("include" "ext/Runaphys/include")
@@ -50,27 +53,8 @@ elseif($ENV{IMAS_ENVIRONMENT_LOADED})
 			 ext/Runaphys/src/critical_field.cpp
 			 ext/Runaphys/src/growth_rate.cpp)
 	add_library(runin_imas ${SOURCE_FILES})
-#IMAS environment (no imas constants)
 else()
-	message("###Compiler set to IMAS (no imas-constants)###")
-
-	execute_process(COMMAND tcsh -c "pkg-config --cflags imas-cpp blitz libxml-2.0 xmllib"
-			OUTPUT_VARIABLE shell_script1)
-	execute_process(COMMAND tcsh -c "pkg-config --libs imas-cpp blitz libxml-2.0 xmllib"
-			OUTPUT_VARIABLE shell_script2)
-
-	add_gateway_flag(INPUT ${shell_script1} TO CMAKE_CXX_FLAGS)
-	add_gateway_flag(INPUT ${shell_script2} TO CMAKE_EXE_LINKER_FLAGS)
-
-	include_directories("include" "ext/Runaphys/include")
-
-	set(SOURCE_FILES src/runin_imas.cpp
-			 src/codeparams_imas.cpp
-			 src/ids_utils.cpp
-			 ext/Runaphys/src/critical_field.cpp
-			 ext/Runaphys/src/growth_rate.cpp)
-
-	add_library(runin_imas ${SOURCE_FILES})
+	message(FATAL_ERROR "###Neither ITM or IMAS loaded###")
 endif()
 
 #Use the -DTESTING_ENABLED=yes flag if you want to build the tests
