#85 CMake bugfix for JET

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC ")
 if($ENV{ITM_ENVIRONMENT_LOADED})
 	message("###Compiler set to ITM###")
 
-	execute_process(COMMAND tcsh -c "eval-pkg-config --cflags ual-cpp-gnu --cflags itmconstants --cflags xmllib-$ENV{ITM_GCC_OBJECTCODE}"
+	execute_process(COMMAND eval-pkg-config --cflags ual-cpp-gnu --cflags itmconstants --cflags xmllib-$ENV{ITM_GCC_OBJECTCODE}
 			OUTPUT_VARIABLE shell_script1)	
-	execute_process(COMMAND tcsh -c "eval-pkg-config --libs ual-cpp-gnu xmllib-$ENV{ITM_GCC_OBJECTCODE}"
+	execute_process(COMMAND eval-pkg-config --libs ual-cpp-gnu xmllib-$ENV{ITM_GCC_OBJECTCODE}
 			OUTPUT_VARIABLE shell_script2)
 
 	add_gateway_flag(INPUT ${shell_script1} TO CMAKE_CXX_FLAGS)
